tests/syntax_tests/data/parsing/errors/expressions/oldArraySyntax.res
// Old Reason array literal
let s = [|1, 2, 3|]

